Added CRUD for Projects and developers

--- a/BugTracker.csproj
+++ b/BugTracker.csproj
@@ -168,14 +168,31 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DeveloperController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004020134181_InitialMigration.cs" />
+    <Compile Include="Migrations\202004020134181_InitialMigration.Designer.cs">
+      <DependentUpon>202004020134181_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004020407561_AddedProjectModel.cs" />
+    <Compile Include="Migrations\202004020407561_AddedProjectModel.Designer.cs">
+      <DependentUpon>202004020407561_AddedProjectModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004022105242_PendingMigrations.cs" />
+    <Compile Include="Migrations\202004022105242_PendingMigrations.Designer.cs">
+      <DependentUpon>202004022105242_PendingMigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Developer.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -184,12 +201,133 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\adminlte.css" />
+    <Content Include="Content\css\adminlte.min.css" />
+    <Content Include="Content\css\alt\adminlte.components.css" />
+    <Content Include="Content\css\alt\adminlte.components.min.css" />
+    <Content Include="Content\css\alt\adminlte.core.css" />
+    <Content Include="Content\css\alt\adminlte.core.min.css" />
+    <Content Include="Content\css\alt\adminlte.extra-components.css" />
+    <Content Include="Content\css\alt\adminlte.extra-components.min.css" />
+    <Content Include="Content\css\alt\adminlte.pages.css" />
+    <Content Include="Content\css\alt\adminlte.pages.min.css" />
+    <Content Include="Content\css\alt\adminlte.plugins.css" />
+    <Content Include="Content\css\alt\adminlte.plugins.min.css" />
+    <Content Include="Content\css\docs.css" />
+    <Content Include="Content\css\highlighter.css" />
+    <Content Include="Content\img\AdminLTELogo.png" />
+    <Content Include="Content\img\logo-xl.png" />
+    <Content Include="Content\img\logo-xs.png" />
+    <Content Include="Content\img\user1-128x128.jpg" />
+    <Content Include="Content\img\user2-160x160.jpg" />
+    <Content Include="Content\img\user3-128x128.jpg" />
+    <Content Include="Content\img\user4-128x128.jpg" />
+    <Content Include="Content\img\user5-128x128.jpg" />
+    <Content Include="Content\img\user6-128x128.jpg" />
+    <Content Include="Content\img\user7-128x128.jpg" />
+    <Content Include="Content\img\user8-128x128.jpg" />
+    <Content Include="Content\js\adminlte.js" />
+    <Content Include="Content\js\adminlte.min.js" />
+    <Content Include="Content\js\demo.js" />
+    <Content Include="Content\js\pages\dashboard.js" />
+    <Content Include="Content\js\pages\dashboard2.js" />
+    <Content Include="Content\js\pages\dashboard3.js" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.bundle.js" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\plugins\fontawesome-free\css\all.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\all.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\brands.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\brands.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\fontawesome.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\fontawesome.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\regular.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\regular.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\solid.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\solid.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\svg-with-js.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\svg-with-js.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\v4-shims.css" />
+    <Content Include="Content\plugins\fontawesome-free\css\v4-shims.min.css" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-brands-400.svg" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-regular-400.svg" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-solid-900.svg" />
+    <Content Include="Content\plugins\jquery\core.js" />
+    <Content Include="Content\plugins\jquery\jquery.js" />
+    <Content Include="Content\plugins\jquery\jquery.min.js" />
+    <Content Include="Content\plugins\jquery\jquery.slim.js" />
+    <Content Include="Content\plugins\jquery\jquery.slim.min.js" />
+    <Content Include="Content\plugins\overlayScrollbars\css\OverlayScrollbars.css" />
+    <Content Include="Content\plugins\overlayScrollbars\css\OverlayScrollbars.min.css" />
+    <Content Include="Content\plugins\overlayScrollbars\js\jquery.overlayScrollbars.js" />
+    <Content Include="Content\plugins\overlayScrollbars\js\jquery.overlayScrollbars.min.js" />
+    <Content Include="Content\plugins\overlayScrollbars\js\OverlayScrollbars.js" />
+    <Content Include="Content\plugins\overlayScrollbars\js\OverlayScrollbars.min.js" />
+    <Content Include="Content\plugins\popper\esm\popper-utils.js" />
+    <Content Include="Content\plugins\popper\esm\popper-utils.min.js" />
+    <Content Include="Content\plugins\popper\esm\popper.js" />
+    <Content Include="Content\plugins\popper\esm\popper.min.js" />
+    <Content Include="Content\plugins\popper\popper-utils.js" />
+    <Content Include="Content\plugins\popper\popper-utils.min.js" />
+    <Content Include="Content\plugins\popper\popper.js" />
+    <Content Include="Content\plugins\popper\popper.min.js" />
+    <Content Include="Content\plugins\popper\umd\popper-utils.js" />
+    <Content Include="Content\plugins\popper\umd\popper-utils.min.js" />
+    <Content Include="Content\plugins\popper\umd\popper.js" />
+    <Content Include="Content\plugins\popper\umd\popper.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\css\adminlte.css.map" />
+    <Content Include="Content\css\adminlte.min.css.map" />
+    <Content Include="Content\css\alt\adminlte.components.css.map" />
+    <Content Include="Content\css\alt\adminlte.components.min.css.map" />
+    <Content Include="Content\css\alt\adminlte.core.css.map" />
+    <Content Include="Content\css\alt\adminlte.core.min.css.map" />
+    <Content Include="Content\css\alt\adminlte.extra-components.css.map" />
+    <Content Include="Content\css\alt\adminlte.extra-components.min.css.map" />
+    <Content Include="Content\css\alt\adminlte.pages.css.map" />
+    <Content Include="Content\css\alt\adminlte.pages.min.css.map" />
+    <Content Include="Content\css\alt\adminlte.plugins.css.map" />
+    <Content Include="Content\css\alt\adminlte.plugins.min.css.map" />
+    <Content Include="Content\js\adminlte.js.map" />
+    <Content Include="Content\js\adminlte.min.js.map" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.js.map" />
+    <Content Include="Content\plugins\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-brands-400.eot" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-brands-400.ttf" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-brands-400.woff" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-brands-400.woff2" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-regular-400.eot" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-regular-400.ttf" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-regular-400.woff" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-regular-400.woff2" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-solid-900.eot" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-solid-900.ttf" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-solid-900.woff" />
+    <Content Include="Content\plugins\fontawesome-free\webfonts\fa-solid-900.woff2" />
+    <Content Include="Content\plugins\jquery\jquery.min.map" />
+    <Content Include="Content\plugins\jquery\jquery.slim.min.map" />
+    <Content Include="Content\plugins\popper\esm\popper-utils.js.map" />
+    <Content Include="Content\plugins\popper\esm\popper-utils.min.js.map" />
+    <Content Include="Content\plugins\popper\esm\popper.js.map" />
+    <Content Include="Content\plugins\popper\esm\popper.min.js.map" />
+    <Content Include="Content\plugins\popper\popper-utils.js.map" />
+    <Content Include="Content\plugins\popper\popper-utils.min.js.map" />
+    <Content Include="Content\plugins\popper\popper.js.map" />
+    <Content Include="Content\plugins\popper\popper.min.js.map" />
+    <Content Include="Content\plugins\popper\umd\popper-utils.js.map" />
+    <Content Include="Content\plugins\popper\umd\popper-utils.min.js.map" />
+    <Content Include="Content\plugins\popper\umd\popper.js.flow" />
+    <Content Include="Content\plugins\popper\umd\popper.js.map" />
+    <Content Include="Content\plugins\popper\umd\popper.min.js.map" />
+    <Content Include="Content\plugins\popper\umd\poppper.js.flow" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -234,6 +372,21 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Project\Create.cshtml" />
+    <Content Include="Views\Project\Delete.cshtml" />
+    <Content Include="Views\Project\Details.cshtml" />
+    <Content Include="Views\Project\Edit.cshtml" />
+    <Content Include="Views\Project\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutFooter.cshtml" />
+    <Content Include="Views\Shared\_LayoutHeader.cshtml" />
+    <Content Include="Views\Shared\_LayoutJS.cshtml" />
+    <Content Include="Views\Shared\_LayoutSidebar.cshtml" />
+    <Content Include="Views\Shared\_LayoutTopbar.cshtml" />
+    <Content Include="Views\Developer\Create.cshtml" />
+    <Content Include="Views\Developer\Delete.cshtml" />
+    <Content Include="Views\Developer\Details.cshtml" />
+    <Content Include="Views\Developer\Edit.cshtml" />
+    <Content Include="Views\Developer\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -250,6 +403,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004020134181_InitialMigration.resx">
+      <DependentUpon>202004020134181_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004020407561_AddedProjectModel.resx">
+      <DependentUpon>202004020407561_AddedProjectModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004022105242_PendingMigrations.resx">
+      <DependentUpon>202004022105242_PendingMigrations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
