--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=localhost;Database=BugTrackerDB;User ID=$USERNAME;Password=$PASSWORD;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=localhost;Database=BugTrackerDB;User ID=sa;Password=Password1!;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
