--- a/BugTracker.csproj
+++ b/BugTracker.csproj
@@ -204,6 +204,14 @@
     <Compile Include="Migrations\202004051733173_AssociatedProjectsAndTickets.Designer.cs">
       <DependentUpon>202004051733173_AssociatedProjectsAndTickets.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004060215388_AddedIsSelectedToDevelopersInDb.cs" />
+    <Compile Include="Migrations\202004060215388_AddedIsSelectedToDevelopersInDb.Designer.cs">
+      <DependentUpon>202004060215388_AddedIsSelectedToDevelopersInDb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202004062210196_DeletedIsSelectedFromDevelopersInDb.cs" />
+    <Compile Include="Migrations\202004062210196_DeletedIsSelectedFromDevelopersInDb.Designer.cs">
+      <DependentUpon>202004062210196_DeletedIsSelectedFromDevelopersInDb.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -213,7 +221,9 @@
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\ProjectDetailsViewModel.cs" />
+    <Compile Include="ViewModels\Developer\DeveloperViewModel.cs" />
+    <Compile Include="ViewModels\Developer\SelectedDevelopers.cs" />
+    <Compile Include="ViewModels\Project\ProjectViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -411,6 +421,8 @@
     <Content Include="Views\Tickets\Details.cshtml" />
     <Content Include="Views\Tickets\Edit.cshtml" />
     <Content Include="Views\Tickets\Index.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\SelectedDevelopers.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\DeveloperViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -449,6 +461,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004051733173_AssociatedProjectsAndTickets.resx">
       <DependentUpon>202004051733173_AssociatedProjectsAndTickets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004060215388_AddedIsSelectedToDevelopersInDb.resx">
+      <DependentUpon>202004060215388_AddedIsSelectedToDevelopersInDb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004062210196_DeletedIsSelectedFromDevelopersInDb.resx">
+      <DependentUpon>202004062210196_DeletedIsSelectedFromDevelopersInDb.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
