--- a/Views/Web.config
+++ b/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="BugTracker" />
+        <add namespace="System.Web.WebPages.Html" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
